dark mode bug fixed

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -24,6 +24,10 @@ h1, h2 {
     font-family: var(--font1);
 }
 
+a {
+    color: var(--color-dark-blue);
+}
+
 /* --------------------------------------------------------------- */
 
 /* dark mode setting */
@@ -185,7 +189,7 @@ h1, h2 {
 
 #container .card {
     border: 1px solid var(--color-navy-blue);
-    background-color: var(--color-light-grey);
+    /* background-color: var(--color-light-grey); */
     margin: 0 auto;
     width: 100%;
     box-sizing: border-box;
@@ -360,7 +364,7 @@ footer .text {
 
 #discover-container .discover-card {
     border: 1px solid var(--color-navy-blue);
-    background-color: var(--color-light-grey);
+    /* background-color: var(--color-light-grey); */
     margin: 0 auto;
     width: 100%;
     box-sizing: border-box;
@@ -447,13 +451,13 @@ footer .text {
     text-align: center;
     font-size: 1.5rem;
     font-family: var(--font1);
-    color: var(--color-dark-blue);
+    /* color: var(--color-dark-blue); */
 }
 
 #join-container form label {
     display: block;
     padding-top: 1rem;
-    color: var(--color-dark-blue);
+    /* color: var(--color-dark-blue); */
 }
 
 #join-container form input {
@@ -509,7 +513,7 @@ footer .text {
     font-family: var(--font1);
     padding-top: 1.5rem;
     font-size: 1.5rem;
-    color: var(--color-dark-blue);
+    /* color: var(--color-dark-blue); */
 }
 
 #join-container th, td {
@@ -620,7 +624,7 @@ footer .text {
 
 #directory-container a {
     text-decoration: none;
-    color: var(--color-dark-blue);    
+    /* color: var(--color-dark-blue);     */
 }
 
 #directory-container .directory-menu {
